<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>godot</name>
  <version>0.0.0</version>
  <description>This package is a AMR implementation using 2D LIDAR scanner and SLAM navigation algorithms.</description>
  <maintainer email="lglima61@gmail.com">Luiz Lima</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
